--- a/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
@@ -7,7 +7,6 @@ if(count($this->membresFiles) == 0){
 	return false;
 }
 
-//foreach($this->membresFiles as $val => $membre){
 foreach($this->informationsMembre as $val => $membre){
 
 	$erreurFile = 0;
@@ -31,22 +30,23 @@ foreach($this->informationsMembre as $val => $membre){
 	$cptConcerne = 0;
 	foreach($this->listeCommunes as $val => $commune){
 		foreach($this->dossierComm as $val => $dossierInfos){
-			if( count($dossierInfos['infosEtab']['adresses']) > 0 && count($commune) > 0){
-				if($dossierInfos['infosEtab']['adresses'][0]['LIBELLE_COMMUNE'] == $commune[0]){
-					//ICI ON DOIT VERIFIER LES DROITS DES MEMBRES AVANT D'AJOUTER LE DOSSIER
-					if($membre['categories'][ $dossierInfos['infosEtab']['informations']['ID_CATEGORIE']]['ID_COMMISSIONMEMBRE'] && $membre['types'][ $dossierInfos['infosEtab']['informations']['ID_TYPEACTIVITE']]['ID_COMMISSIONMEMBRE'] && $membre['dossiertypes'][ $dossierInfos['TYPE_DOSSIER']]['ID_COMMISSIONMEMBRE'])
-					{
-                                            $cptConcerne ++;
-                                        }
-				}
+			if(
+				(count($dossierInfos['infosEtab']['adresses']) > 0 && !empty($commune))
+				&& $dossierInfos['infosEtab']['adresses'][0]['LIBELLE_COMMUNE'] == $commune[0]
+				&& (
+					$membre['categories'][ $dossierInfos['infosEtab']['informations']['ID_CATEGORIE']]['ID_COMMISSIONMEMBRE']
+					&& $membre['types'][ $dossierInfos['infosEtab']['informations']['ID_TYPEACTIVITE']]['ID_COMMISSIONMEMBRE']
+					&& $membre['dossiertypes'][ $dossierInfos['TYPE_DOSSIER']]['ID_COMMISSIONMEMBRE']
+					)
+			){
+				$cptConcerne ++;
 			}
 		}
 	}
 
 	if($erreurFile == 0 && $cptConcerne > 0 )
 	{
-		#if($membre['infosFiles'][0]['ID_GROUPEMENT'] == NULL && $membre['infosFiles'][0]['ID_UTILISATEURINFORMATIONS'] == NULL){
-                if($membre['infosFiles'][0]['ID_GROUPEMENT'] == NULL){
+		if($membre['infosFiles'][0]['ID_GROUPEMENT'] == NULL){
 			//génération du document par commune pour les maires par exemple
 			//si le document concernant ce membre existe alors on rentre dans la boucle
 			$odf = new Odf(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR."courriers".DIRECTORY_SEPARATOR.$nomFichier);
@@ -54,21 +54,11 @@ foreach($this->informationsMembre as $val => $membre){
 			//Generation du segment villeDoss
 			$villeODF = $odf->setSegment('villeDoss');
 			foreach($this->listeCommunes as $val => $commune){
-				//Zend_Debug::dump($commune);exit()
-				//Array des infos de la commune = 1
-				//$firstLetter = $commune[0]{0};
-				//if(in_array($firstLetter, $consonne)){
-                                //    $communeShow = "d'".$commune[0];
-				//}else{
-                                //    $communeShow = "de ".$commune[0];
-				//}
-				//echo $commune[0]."<br/>";
-				//Zend_Debug::dump($commune[0]);
 				foreach($commune[1] as $comm => $info){
-                                    setVars($villeODF,'numMairie',$info["NUMEROADRESSE_UTILISATEURINFORMATIONS"]);
-                                    setVars($villeODF,'rueMairie',$info["RUEADRESSE_UTILISATEURINFORMATIONS"]);
-                                    setVars($villeODF,'cpMairie',$info["CPADRESSE_UTILISATEURINFORMATIONS"]);
-        			}
+					setVars($villeODF,'numMairie',$info["NUMEROADRESSE_UTILISATEURINFORMATIONS"]);
+					setVars($villeODF,'rueMairie',$info["RUEADRESSE_UTILISATEURINFORMATIONS"]);
+					setVars($villeODF,'cpMairie',$info["CPADRESSE_UTILISATEURINFORMATIONS"]);
+				}
 
 				setVars($villeODF,'communeMairie',$commune[0]);
 				setVars($villeODF,'commissionNom',$this->commissionInfos[0]['LIBELLE_COMMISSION']);
@@ -84,52 +74,50 @@ foreach($this->informationsMembre as $val => $membre){
 				$heureComm = $heureCommTab[0].":".$heureCommTab[1];
 				setVars($villeODF,'heureDebutComm',$heureComm);
                                 
-                                $heureDebut = '';
-                                foreach($this->dossierComm as $val => $dossierInfos){
-					if(count($dossierInfos['infosEtab']['adresses']) > 0 ){
-						//echo $dossierInfos['infosEtab']['adresses'][0]['LIBELLE_COMMUNE']." - ".$commune[0];
-						if($dossierInfos['infosEtab']['adresses'][0]['LIBELLE_COMMUNE'] == $commune[0]){
-							//ICI ON DOIT VERIFIER LES DROITS DES MEMBRES AVANT D'AJOUTER LE DOSSIER
-							if($membre['categories'][ $dossierInfos['infosEtab']['informations']['ID_CATEGORIE']]['ID_COMMISSIONMEMBRE'] && $membre['types'][ $dossierInfos['infosEtab']['informations']['ID_TYPEACTIVITE']]['ID_COMMISSIONMEMBRE'] && $membre['dossiertypes'][ $dossierInfos['TYPE_DOSSIER']]['ID_COMMISSIONMEMBRE'])
-							{
-                                                            if(isset($dossierInfos["HEURE_DEB_AFFECT"])){
-                                                                $heureDebutTab = explode(":",$dossierInfos["HEURE_DEB_AFFECT"]);
-                                                                $heureDebut = $heureDebutTab[0].":".$heureDebutTab[1];
-                                                                break;
-                                                            }
-                                                        }
-						}
+				$heureDebut = '';
+				foreach($this->dossierComm as $val => $dossierInfos){
+					if(
+						count($dossierInfos['infosEtab']['adresses']) > 0
+						&& $dossierInfos['infosEtab']['adresses'][0]['LIBELLE_COMMUNE'] == $commune[0]
+						&& (
+							$membre['categories'][ $dossierInfos['infosEtab']['informations']['ID_CATEGORIE']]['ID_COMMISSIONMEMBRE']
+							&& $membre['types'][ $dossierInfos['infosEtab']['informations']['ID_TYPEACTIVITE']]['ID_COMMISSIONMEMBRE']
+							&& $membre['dossiertypes'][ $dossierInfos['TYPE_DOSSIER']]['ID_COMMISSIONMEMBRE']
+							)
+						&& isset($dossierInfos["HEURE_DEB_AFFECT"])
+					){
+						$heureDebutTab = explode(":",$dossierInfos["HEURE_DEB_AFFECT"]);
+						$heureDebut = $heureDebutTab[0].":".$heureDebutTab[1];
+						break;
 					}
 				}
-                                setVars($villeODF, 'heureDeb1erDossier', $heureDebut);
+				setVars($villeODF, 'heureDeb1erDossier', $heureDebut);
                                 
 				//ICI FOREACH SUR LES DOSSIERS DE LA COMMUNE
 				//Generation du segment pour l'affichage des différentes infos du dossier
-				//Zend_Debug::dump($this->dossierComm);
 				$infosDoss = $villeODF->infosDoss;
 				foreach($this->dossierComm as $val => $dossierInfos){
-					if( count($dossierInfos['infosEtab']['adresses']) > 0 ){
-						//echo $dossierInfos['infosEtab']['adresses'][0]['LIBELLE_COMMUNE']." - ".$commune[0];
-						if($dossierInfos['infosEtab']['adresses'][0]['LIBELLE_COMMUNE'] == $commune[0]){
-							//ICI ON DOIT VERIFIER LES DROITS DES MEMBRES AVANT D'AJOUTER LE DOSSIER
-							if($membre['categories'][ $dossierInfos['infosEtab']['informations']['ID_CATEGORIE']]['ID_COMMISSIONMEMBRE'] && $membre['types'][ $dossierInfos['infosEtab']['informations']['ID_TYPEACTIVITE']]['ID_COMMISSIONMEMBRE'] && $membre['dossiertypes'][ $dossierInfos['TYPE_DOSSIER']]['ID_COMMISSIONMEMBRE'])
-							{
-                                                            retrieveInfoDossier($infosDoss, $dossierInfos);
-                                                            $villeODF->infosDoss->merge();
-                                                        }else{
-								//cas membre n'a pas les droits
-							}
-						}
+					if(
+						count($dossierInfos['infosEtab']['adresses']) > 0
+						&& $dossierInfos['infosEtab']['adresses'][0]['LIBELLE_COMMUNE'] == $commune[0]
+						&& (
+							$membre['categories'][ $dossierInfos['infosEtab']['informations']['ID_CATEGORIE']]['ID_COMMISSIONMEMBRE']
+							&& $membre['types'][ $dossierInfos['infosEtab']['informations']['ID_TYPEACTIVITE']]['ID_COMMISSIONMEMBRE']
+							&& $membre['dossiertypes'][ $dossierInfos['TYPE_DOSSIER']]['ID_COMMISSIONMEMBRE']
+						)
+					){
+						retrieveInfoDossier($infosDoss, $dossierInfos);
+						$villeODF->infosDoss->merge();
 					}
 				}
-                                $villeODF->merge();
+				$villeODF->merge();
 			}
 			$odf->mergeSegment($villeODF);
 
 			$nouvellePJ = savePj($this->idComm ,$membre['infosFiles'][0]['LIBELLE_COMMISSIONMEMBRE']);
 
-                        $store = Zend_Controller_Front::getInstance()->getParam('bootstrap')->getResource('dataStore');
-                        $path = $store->getFilePath($nouvellePJ, 'dateCommission', $this->idComm, true);
+			$store = Zend_Controller_Front::getInstance()->getParam('bootstrap')->getResource('dataStore');
+			$path = $store->getFilePath($nouvellePJ, 'dateCommission', $this->idComm, true);
 			$odf->saveToDisk($path);
 
 			echo "<span id='notif' class='ui-state-highlight ui-corner-all' style='padding: 0.3em;'>La convocation pour le membre : ".$membre['infosFiles'][0]['LIBELLE_COMMISSIONMEMBRE']." à bien été généré</span><br/><br/><br/>";
@@ -148,7 +136,7 @@ foreach($this->informationsMembre as $val => $membre){
 			//On commence par selectionner le document approprié
 			$odf = new Odf(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR."courriers".DIRECTORY_SEPARATOR.$nomFichier);
 
-                        retrieveInfoGroupementCommission($odf, $this->commissionInfos, $this->heureDeb, $this->dateComm, $infosGroupement, $this->listeCommunes);
+			retrieveInfoGroupementCommission($odf, $this->commissionInfos, $this->heureDeb, $this->dateComm, $infosGroupement, $this->listeCommunes);
 
 			//Generation du segment grpLoop
 			$grpLoop = $odf->setSegment('grpLoop');
@@ -157,37 +145,41 @@ foreach($this->informationsMembre as $val => $membre){
 
 			//On commence par parcourir les dossier pour récuperer la ville concernée
 			foreach($this->dossierComm as $val => $dossierInfos){
-                            $dossierExported = false;
-                            //On parcour la liste des ville du groupement concerné pour comparer avec la ville du dossier
-                            foreach($listeVillesGroupement as $var => $val){
+				$dossierExported = false;
+				//On parcour la liste des ville du groupement concerné pour comparer avec la ville du dossier
+				foreach($listeVillesGroupement as $var => $val){
 
 				//Lorsque les deux correspondent, on récupère les éléments du dossier pour générer le document
-                                if(count($dossierInfos['infosEtab']['adresses']) > 0 && $dossierInfos['infosEtab']['adresses'][0]['NUMINSEE_COMMUNE'] == $val['NUMINSEE_COMMUNE']){
-                                    if($membre['categories'][ $dossierInfos['infosEtab']['informations']['ID_CATEGORIE']]['ID_COMMISSIONMEMBRE'] && $membre['types'][ $dossierInfos['infosEtab']['informations']['ID_TYPEACTIVITE']]['ID_COMMISSIONMEMBRE'] && $membre['dossiertypes'][ $dossierInfos['TYPE_DOSSIER']]['ID_COMMISSIONMEMBRE']){
-                                        retrieveInfoDossier($grpLoop, $dossierInfos);
-                                        setVars($odf, 'nomEtab',$dossierInfos['infosEtab']['informations']["LIBELLE_ETABLISSEMENTINFORMATIONS"]);
-                                        setVars($odf, 'numWinPrev', $dossierInfos['infosEtab']['general']['NUMEROID_ETABLISSEMENT']);
-                                        $dossierExported = true;
-                                        // on a trouvé la ville du groupement de l'établissement, pas la peine de parcourir toutes les villes, on s'arrête
-                                        break;
-                                    }else{
-					//cas membre n'a pas les droits
-                                    }
-                                }
-                            }
-                            // si la commune dossier n'est pas dans le groupement considéré
-                            // on ne génère pas de section "vide" avec des balises moches
-                            if ($dossierExported) {
-                                $grpLoop->merge();
-                            }
+					if(
+						count($dossierInfos['infosEtab']['adresses']) > 0
+						&& $dossierInfos['infosEtab']['adresses'][0]['NUMINSEE_COMMUNE'] == $val['NUMINSEE_COMMUNE']
+						&& (
+							$membre['categories'][ $dossierInfos['infosEtab']['informations']['ID_CATEGORIE']]['ID_COMMISSIONMEMBRE']
+							&& $membre['types'][ $dossierInfos['infosEtab']['informations']['ID_TYPEACTIVITE']]['ID_COMMISSIONMEMBRE']
+							&& $membre['dossiertypes'][ $dossierInfos['TYPE_DOSSIER']]['ID_COMMISSIONMEMBRE']
+						)
+					){
+						retrieveInfoDossier($grpLoop, $dossierInfos);
+						setVars($odf, 'nomEtab',$dossierInfos['infosEtab']['informations']["LIBELLE_ETABLISSEMENTINFORMATIONS"]);
+						setVars($odf, 'numWinPrev', $dossierInfos['infosEtab']['general']['NUMEROID_ETABLISSEMENT']);
+						$dossierExported = true;
+						// on a trouvé la ville du groupement de l'établissement, pas la peine de parcourir toutes les villes, on s'arrête
+						break;
+					}
+				}
+				// si la commune dossier n'est pas dans le groupement considéré
+				// on ne génère pas de section "vide" avec des balises moches
+				if ($dossierExported) {
+					$grpLoop->merge();
+				}
 			}
 
 			$odf->mergeSegment($grpLoop);
 
 			$nouvellePJ = savePj($this->idComm ,$membre['infosFiles'][0]['LIBELLE_COMMISSIONMEMBRE']);
 
-                        $store = Zend_Controller_Front::getInstance()->getParam('bootstrap')->getResource('dataStore');
-                        $path = $store->getFilePath($nouvellePJ, 'dateCommission', $this->idComm, true);
+			$store = Zend_Controller_Front::getInstance()->getParam('bootstrap')->getResource('dataStore');
+			$path = $store->getFilePath($nouvellePJ, 'dateCommission', $this->idComm, true);
 			$odf->saveToDisk($path);
 
 			echo "<span id='notif' class='ui-state-highlight ui-corner-all' style='padding: 0.3em;'>La convocation pour le membre : ".$membre['infosFiles'][0]['LIBELLE_COMMISSIONMEMBRE']." à bien été généré</span><br/><br/><br/>";
@@ -199,8 +191,9 @@ foreach($this->informationsMembre as $val => $membre){
 
 function addChamp($segment,$nomOdf, $variable){
 	try{
-		if($variable == "")
+		if($variable == "") {
 			$variable = "";
+		}
 		$segment->$nomOdf(utf8_decode($variable));
 	}catch (Exception $e) {
 
@@ -238,11 +231,13 @@ function retrieveInfoDossier($segment, $dossierInfos) {
     setVars($segment, 'idDossier', $dossierInfos["ID_DOSSIER"]);
     setVars($segment, 'numWinPrev', $dossierInfos['infosEtab']['general']['NUMEROID_ETABLISSEMENT']);
     setVars($segment, 'mailEtab', $dossierInfos['infosEtab']['general']["COURRIEL_ETABLISSEMENT"]);
-    setVars($segment, 'communeEtab', $dossierInfos['infosEtab']["adresses"][0]["LIBELLE_COMMUNE"]);
+	setVars($segment, 'communeEtab', $dossierInfos['infosEtab']["adresses"][0]["LIBELLE_COMMUNE"]);
+	
     $adresse = $dossierInfos['infosEtab']["adresses"][0]["NUMERO_ADRESSE"]." ";
-        $adresse .= $dossierInfos['infosEtab']["adresses"][0]["LIBELLE_RUE"]." ";
-        $adresse .= $dossierInfos['infosEtab']["adresses"][0]["CODEPOSTAL_COMMUNE"]." ";
-        $adresse .= $dossierInfos['infosEtab']["adresses"][0]["LIBELLE_COMMUNE"];
+	$adresse .= $dossierInfos['infosEtab']["adresses"][0]["LIBELLE_RUE"]." ";
+	$adresse .= $dossierInfos['infosEtab']["adresses"][0]["CODEPOSTAL_COMMUNE"]." ";
+	$adresse .= $dossierInfos['infosEtab']["adresses"][0]["LIBELLE_COMMUNE"];
+
     setVars($segment, 'etablissementAdresse', $adresse);
     setVars($segment, 'categorieEtab', $dossierInfos['infosEtab']['informations']["LIBELLE_CATEGORIE"]);
     setVars($segment, 'typeLettreP', $dossierInfos['infosEtab']['informations']["LIBELLE_TYPE_PRINCIPAL"]);
@@ -251,25 +246,23 @@ function retrieveInfoDossier($segment, $dossierInfos) {
     setVars($segment, 'avisDossierCommission', getAvis($dossierInfos["AVIS_DOSSIER_COMMISSION"]));
     setVars($segment, 'avisDossier', getAvis($dossierInfos["AVIS_DOSSIER"]));
 
+	$heureDebut = '';
     if(isset($dossierInfos["HEURE_DEB_AFFECT"])){
         $heureDebutTab = explode(":",$dossierInfos["HEURE_DEB_AFFECT"]);
         $heureDebut = $heureDebutTab[0].":".$heureDebutTab[1];
-    }else{
-        $heureDebut = '';
     }
     setVars($segment, 'heureDebDossier', $heureDebut);
 
+	$heureFin = '';
     if(isset($dossierInfos["HEURE_FIN_AFFECT"])){
         $heureFinTab = explode(":",$dossierInfos["HEURE_FIN_AFFECT"]);
         $heureFin = $heureFinTab[0].":".$heureFinTab[1];
-    }else{
-        $heureFin = '';
     }
     setVars($segment, 'heureFinDossier', $heureFin);
 
     $listeDocUrba = "";
     foreach($dossierInfos["listeDocUrba"] as $va => $docurb){
-	$listeDocUrba .= $docurb['NUM_DOCURBA']."    ";
+		$listeDocUrba .= $docurb['NUM_DOCURBA']."    ";
     }
     setVars($segment, 'numDocUrba', $listeDocUrba);
 
@@ -329,10 +322,7 @@ function setVars($odf,$nomOdf, $variable){
       $variable = "";
     }
     $odf->setVars($nomOdf,$variable, true,'UTF8');
-    #$segment->$nomOdf(utf8_decode($variable));
   } catch (Exception $e) {
 
   }
 }
-
-?>
